Feature 14 - fine tune messages (and more build preparations)
git-svn-id: svn://svn.code.sf.net/p/jpwsafe/code/trunk@498 3f901d5b-7c5d-4663-935e-8925751b605d